<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <TextView
        android:id="@+id/createAccountTitle"
        android:layout_width="283dp"
        android:layout_height="53dp"
        android:text="@string/create"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="48dp" />

    <TextView
        android:id="@+id/createAccountTitle2"
        android:layout_width="285dp"
        android:layout_height="55dp"
        android:text="@string/account"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="101dp" />

    <EditText
        android:id="@+id/CreateUsername"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_grey"
        android:ems="10"
        android:hint="@string/enter_username_hint"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="200dp" />

    <EditText
        android:id="@+id/CreateEmail"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_grey"
        android:ems="10"
        android:hint="@string/enter_email_hint"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="290dp" />

    <EditText
        android:id="@+id/CreatePassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_grey"
        android:ems="10"
        android:hint="@string/enter_password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="380dp" />

    <EditText
        android:id="@+id/ConfirmPassword"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_grey"
        android:ems="10"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="470dp" />

    <Button
        android:id="@+id/signup"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_orange"
        android:text="@string/sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="85dp"
        tools:layout_editor_absoluteY="600dp" />

</androidx.constraintlayout.widget.ConstraintLayout>