<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/perfilInfo"
        android:layout_width="182dp"
        android:layout_height="196dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/information"
        tools:layout_editor_absoluteY="40dp" />

    <TextView
        android:id="@+id/tellUsMore"
        android:layout_width="178dp"
        android:layout_height="66dp"
        android:text="@string/tellUs"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="237dp" />

    <EditText
        android:id="@+id/firstName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/more_rounded_button_grey"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="310dp" />

    <EditText
        android:id="@+id/lastName"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/more_rounded_button_grey"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/lastName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="370dp" />

    <EditText
        android:id="@+id/gender"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/more_rounded_button_grey"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="@string/gender"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="430dp" />



    <EditText
        android:id="@+id/height"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/more_rounded_button_grey"
        android:ems="10"
        android:inputType="number"
        android:text="@string/height"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="490dp" />

    <EditText
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:background="@drawable/more_rounded_button_grey"
        android:ems="10"
        android:inputType="number"
        android:text="@string/weight"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        tools:layout_editor_absoluteX="50dp"
        tools:layout_editor_absoluteY="550dp" />

    <Button
        android:id="@+id/buttonNext"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/more_rounded_button_orange"
        android:text="@string/next"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="610dp" />

    <TextView
        android:id="@+id/cm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cm"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="504dp" />

    <TextView
        android:id="@+id/kg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kg"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="212dp"
        tools:layout_editor_absoluteY="561dp" />

    <ImageButton
        android:id="@+id/selectGender"
        android:layout_width="91dp"
        android:layout_height="79dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:padding="20dp"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/down_icon"
        tools:layout_editor_absoluteX="268dp"
        tools:layout_editor_absoluteY="417dp" />

</androidx.constraintlayout.widget.ConstraintLayout>