<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange">

    <ImageView
        android:id="@+id/Logo"
        android:layout_width="264dp"
        android:layout_height="293dp"
        android:src="@drawable/FitnessLogo"
        android:layout_gravity="center"/>

    <EditText
        android:id="@+id/Username"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_grey"
        android:drawableStart="@drawable/baseline_person_outline_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"/>

    <EditText
        android:id="@+id/Password"
        android:layout_width="365dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:background="@drawable/rounded_button_grey"
        android:drawableStart="@drawable/baseline_lock_24"
        android:drawableEnd="@drawable/baseline_visibility_off_24"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingEnd="20dp" />

    <TextView
        android:id="@+id/forgotPasswordLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textColor="@color/white"
        android:layout_gravity="end"
        android:layout_marginEnd="50dp"
        android:textSize="14sp"
        android:textStyle="italic"
        android:clickable="true"
        android:focusable="true" />

    <Button
        android:id="@+id/login"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/login"
        android:textSize="20sp"/>

</LinearLayout>