<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <VideoView
        android:id="@+id/chestVideo"
        android:layout_width="412dp"
        android:layout_height="190dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/chestWorkoutTitle"
        android:layout_width="356dp"
        android:layout_height="31dp"
        android:text="@string/chestTitle"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="197dp" />

    <TextView
        android:id="@+id/chest_exercise1"
        android:layout_width="360dp"
        android:layout_height="95dp"
        android:background="@drawable/rounded_button_grey"
        android:paddingStart="92dp"
        android:paddingEnd="8dp"
        android:text="@string/chest_exercise1"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="237dp" />

    <TextView
        android:id="@+id/chest_exercise1_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sets"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/chest_exercise1_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="295dp" />

    <TextView
        android:id="@+id/chest_exercise2"
        android:layout_width="360dp"
        android:layout_height="95dp"
        android:background="@drawable/rounded_button_grey"
        android:paddingStart="92dp"
        android:paddingEnd="60dp"
        android:text="@string/chest_exercise2"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="347dp" />

    <TextView
        android:id="@+id/chest_exercise2_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sets"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="391dp" />

    <TextView
        android:id="@+id/chest_exercise2_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="391dp" />

    <TextView
        android:id="@+id/chest_exercise3"
        android:layout_width="360dp"
        android:layout_height="95dp"
        android:background="@drawable/rounded_button_grey"
        android:paddingStart="92dp"
        android:paddingEnd="60dp"
        android:text="@string/chest_exercise3"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="457dp" />

    <TextView
        android:id="@+id/chest_exercise3_sets"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sets"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="499dp" />

    <TextView
        android:id="@+id/chest_exercise3_reps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reps"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="239dp"
        tools:layout_editor_absoluteY="499dp" />

    <ImageView
        android:id="@+id/goBack"
        android:layout_width="65dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/go_back_button"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="569dp" />

    <Button
        android:id="@+id/startWorkout"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/rounded_button_orange"
        android:text="@string/startWorkout"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="569dp" />



</androidx.constraintlayout.widget.ConstraintLayout>