<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/hello"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="36dp" />

    <TextView
        android:id="@+id/stayRelentless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stay_relentless"
        android:textColor="@color/orange"
        android:textSize="40sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="63dp" />

    <TextView
        android:id="@+id/motivation"
        android:layout_width="360dp"
        android:layout_height="90dp"
        android:background="@drawable/rounded_button_darker_grey"
        android:gravity="start|center_vertical"
        android:paddingStart="90dp"
        android:paddingEnd="30dp"
        android:text="@string/no_excuses"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="133dp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="71dp"
        android:layout_height="75dp"
        app:srcCompat="@drawable/lamp"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="140dp" />

    <Button
        android:id="@+id/chestworkout"
        android:layout_width="360dp"
        android:layout_height="95dp"
        android:background="@drawable/rounded_button_grey"
        android:text="@string/chest_workout"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="296dp" />

    <Button
        android:id="@+id/backworkout"
        android:layout_width="360dp"
        android:layout_height="95dp"
        android:background="@drawable/rounded_button_grey"
        android:drawablePadding="8dp"
        android:text="@string/back_workout"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="405dp" />

    <Button
        android:id="@+id/legsworkout"
        android:layout_width="360dp"
        android:layout_height="95dp"
        android:background="@drawable/rounded_button_grey"
        android:text="@string/legs_workout"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="514dp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:srcCompat="@drawable/back_icon"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="405dp"
        android:elevation="2dp"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="95dp"
        android:layout_height="95dp"
        app:srcCompat="@drawable/chest_icon"
        tools:layout_editor_absoluteX="35dp"
        tools:layout_editor_absoluteY="296dp"
        android:elevation="2dp"/>

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="110dp"
        android:layout_height="100dp"
        android:elevation="2dp"
        app:srcCompat="@drawable/leg_icon"
        tools:layout_editor_absoluteX="28dp"
        tools:layout_editor_absoluteY="514dp" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_navigation_menu" />



</androidx.constraintlayout.widget.ConstraintLayout>