<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="215dp" />

    <TextView
        android:id="@+id/security"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/security"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="265dp" />

    <TextView
        android:id="@+id/language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="315dp" />

    <TextView
        android:id="@+id/darkMode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/darkMode"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="80dp"
        tools:layout_editor_absoluteY="365dp" />

    <Button
        android:id="@+id/logOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logOut"
        android:textColor="@color/red"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        tools:layout_editor_absoluteX="159dp"
        tools:layout_editor_absoluteY="536dp" />

    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.69"
        app:layout_constraintStart_toEndOf="@+id/darkMode"
        tools:layout_editor_absoluteY="360dp" />

    <ImageButton
        android:id="@+id/nextButtonProfile"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/next_icon"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="208dp" />

    <ImageButton
        android:id="@+id/nextButtonSecurity"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/next_icon"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="258dp" />

    <ImageButton
        android:id="@+id/nextButtonLanguage"
        android:layout_width="38dp"
        android:layout_height="37dp"
        android:layout_weight="1"
        android:adjustViewBounds="true"
        android:background="@android:color/transparent"
        android:scaleType="fitCenter"
        app:srcCompat="@drawable/next_icon"
        tools:layout_editor_absoluteX="301dp"
        tools:layout_editor_absoluteY="308dp" />

</androidx.constraintlayout.widget.ConstraintLayout>